ENABLE_LANGUAGE(CXX)
PROJECT(${PROJECT_NAME}_util)

FILE(GLOB ${PROJECT_NAME}_SOURCES "*.cc")

ADD_LIBRARY(${PROJECT_NAME} OBJECT ${${PROJECT_NAME}_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
    ${Protobuf_INCLUDE_DIRS}
    ${gflags_INCLUDE_DIRS}
    ${glog_INCLUDE_DIRS}
    ${Cbc_INCLUDE_DIRS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

ADD_DEPENDENCIES(${PROJECT_NAME} ProtoSources)
